7707 ixgbe crashes on debug builds when it fails to attach Reviewed by: Patrick Mooney <patrick.mooney@joyent.com> Reviewed by: Ryan Zezeski <ryan.zeseski@joyent.com> Reviewed by: Joshua M. Clulow <jmc@joyent.com> Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Dale Ghent <daleg@omniti.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>